--- a/nginx/html/cloud/index.html
+++ b/nginx/html/cloud/index.html
@@ -41,6 +41,7 @@
         <div class="about">
             <a class="btn btn-info button-about" onclick="functionAbout()">About</a>        
         </div>
+        <div id="res3"></div>
         
 
            
