--- a/nginx/html/cloud/index.html
+++ b/nginx/html/cloud/index.html
@@ -26,12 +26,12 @@
      
             <div class="form-group" >
                 <label for="usr">Login:</label>
-                <input type="text" class="form-control" id=login placeholder="Login">  
+                <input type="text" class="form-control" id="login" placeholder="Login">  
                       
             </div>
             <div class="form-group">
                <label for="pwd">Password:</label>
-               <input type="password" class="form-control" class="form-control" id=password placeholder="Password">        
+               <input type="password" class="form-control" class="form-control" id="password" placeholder="Password">        
             </div>
             <a class="btn btn-info button-info" onclick="login()">Sign in</a>
             <a class="btn btn-success button-success">Sign up now!</a>
