better html, more functions in aniapp.py

--- a/nginx/html/cloud/index.html
+++ b/nginx/html/cloud/index.html
@@ -31,10 +31,10 @@
             </div>
             <div class="form-group">
                <label for="pwd">Password:</label>
-               <input type="password" class="form-control" class="form-control" id="password" placeholder="Password">        
+               <input type="password" class="form-control" id="password" placeholder="Password">        
             </div>
             <a class="btn btn-info button-info" onclick="login()">Sign in</a>
-            <a class="btn btn-success button-success">Sign up now!</a>
+            <a class="btn btn-success button-success" onclick="signup()">Sign up now!</a>
         </div>
         
         <div class="about">
