--- a/nginx/html/cloud/index.html
+++ b/nginx/html/cloud/index.html
@@ -13,7 +13,7 @@
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="myjs.js"></script>
-        <script type="text/javascript" src="good_myjs.js"></script>
+        <script type="text/javascript" src="js/login.js"></script>
 	    
         
     </head>
